Removed table booking section

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<script type="text/javascript" src="app.js"></script>
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.1/css/bulma.css">
 	<link rel="stylesheet" type="text/css" href="main.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
 </head>
 <body class="has-text-centered-mobile">
@@ -14,7 +15,7 @@
 		<div class="container">
 			<nav class="navbar" id="navbar">
 				<div class="navbar-brand">
-					<h1 class="title navbar-item b2b has-text-white">Lovegift</h1>
+					<h1 class="title navbar-item b2b has-text-white">Lovegift Vegan</h1>
 				</div>
 
 				<div class="navbar-menu">
@@ -315,70 +316,70 @@
 		</div>
 	</div>
 
-	<div class="hero is-large main__divider__reservation">
-		<div class="hero-body">
-			<h1 class="title has-text-centered b2b has-text-white is-size-1">Make a reservation</h1>
-			<p class="spaced_subtitle has-text-centered has-text-white">Open Thursdays: 12-7:30pm | Fridays & Saturdays: 12-9pm | Sundays: 12-7pm</p>
-			<h3 class="btn content has-text-centered">Book A Table</h3>
-		</div>
-	</div>
+	<!--<div class="hero is-large main__divider__reservation">-->
+	<!--	<div class="hero-body">-->
+	<!--		<h1 class="title has-text-centered b2b has-text-white is-size-1">Make a reservation</h1>-->
+	<!--		<p class="spaced_subtitle has-text-centered has-text-white">Open Thursdays: 12-7:30pm | Fridays & Saturdays: 12-9pm | Sundays: 12-7pm</p>-->
+	<!--		<h3 class="btn content has-text-centered">Book A Table</h3>-->
+	<!--	</div>-->
+	<!--</div>-->
 
-	<div class="hero is-medium main__form-section">
-		<div class="hero-body">
-			<div class="container">
-				<div class="form-container">
-					<div class="columns">
-						<div class="column is-half is-offset-one-quarter" id="form-col">
-							<form>
-								<div class="field">
-									<label class="spaced_subtitle">Name</label>
-									<div class="control">
-										<input class="input" type="text"></input>
-									</div>
-								</div>
+	<!--<div class="hero is-medium main__form-section">-->
+	<!--	<div class="hero-body">-->
+	<!--		<div class="container">-->
+	<!--			<div class="form-container">-->
+	<!--				<div class="columns">-->
+	<!--					<div class="column is-half is-offset-one-quarter" id="form-col">-->
+	<!--						<form>-->
+	<!--							<div class="field">-->
+	<!--								<label class="spaced_subtitle">Name</label>-->
+	<!--								<div class="control">-->
+	<!--									<input class="input" type="text"></input>-->
+	<!--								</div>-->
+	<!--							</div>-->
 
-								<div class="field">
-									<label class="spaced_subtitle">Phone</label>
-									<div class="control">
-										<input class="input" type="text"></input>
-									</div>
-								</div>
+	<!--							<div class="field">-->
+	<!--								<label class="spaced_subtitle">Phone</label>-->
+	<!--								<div class="control">-->
+	<!--									<input class="input" type="text"></input>-->
+	<!--								</div>-->
+	<!--							</div>-->
 
-								<div class="field">
-									<label class="spaced_subtitle">Email</label>
-									<div class="control">
-										<input class="input" type="text"></input>
-									</div>
-								</div>
+	<!--							<div class="field">-->
+	<!--								<label class="spaced_subtitle">Email</label>-->
+	<!--								<div class="control">-->
+	<!--									<input class="input" type="text"></input>-->
+	<!--								</div>-->
+	<!--							</div>-->
 
-								<div class="field is-horizontal">
-									<div class="field-body">
-										<div class="field">
-											<label class="spaced_subtitle">Date</label>
-											<div class="control is-expanded">
-												<input class="input" type="text" placeholder="DD/MM/YYYY"/>
-											</div>
-										</div>
+	<!--							<div class="field is-horizontal">-->
+	<!--								<div class="field-body">-->
+	<!--									<div class="field">-->
+	<!--										<label class="spaced_subtitle">Date</label>-->
+	<!--										<div class="control is-expanded">-->
+	<!--											<input class="input" type="text" placeholder="DD/MM/YYYY"/>-->
+	<!--										</div>-->
+	<!--									</div>-->
 
-										<div class="field">
-											<label class="spaced_subtitle">Time</label>
-											<div class="control is-expanded">
-												<input class="input" type="text" placeholder="7:00PM"></input>
-											</div>
-										</div>
-									</div>
-								</div>
+	<!--									<div class="field">-->
+	<!--										<label class="spaced_subtitle">Time</label>-->
+	<!--										<div class="control is-expanded">-->
+	<!--											<input class="input" type="text" placeholder="7:00PM"></input>-->
+	<!--										</div>-->
+	<!--									</div>-->
+	<!--								</div>-->
+	<!--							</div>-->
 
-								<div class="form-button-container">
-									<button class="form-button">Book Table</button>
-								</div>
-							</form>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
+	<!--							<div class="form-button-container">-->
+	<!--								<button class="form-button">Book Table</button>-->
+	<!--							</div>-->
+	<!--						</form>-->
+	<!--					</div>-->
+	<!--				</div>-->
+	<!--			</div>-->
+	<!--		</div>-->
+	<!--	</div>-->
+	<!--</div>-->
 
 	<footer class="footer spaced_subtitle">
 		<div class="container">
